syntax = "proto3"

package user;

service UserService {
    rpc GetUserById (UserIdRequest) returns (UserResponse);
    rpc ValidateUser (UserIdRequest) returns (UserValidationResponse);
}
message UserIdRequest{
    string userId = 1;
}

message UserResponse{
    bool success  = 1;
    string message = 2;
    UserData user = 3;
}

message UserValidationResponse{
    bool success = 1;
    string message = 2;
    bool isValid = 3;
}

message UserData{
    string id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
    
}